agregado dropdown para el codigo y el nombre de uan materia en el modal separados html de los modales en ver_plan

--- a/misvoti/templates/misvoti/base.html
+++ b/misvoti/templates/misvoti/base.html
@@ -1,19 +1,23 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    {#<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">#}
+    <meta name="description" content="Planeador de trimestres de la Universidad Simón Bolívar">
+    <meta name="author" content="Manuel González">
 
     <title>MisVoti - Controla tu Indice</title>
 
-    <!-- Bootstrap Core CSS -->
-    <link href="{% static 'misvoti/css/bootstrap.min.css' %}" rel="stylesheet">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
     <!-- Custom CSS -->
     <link href="{% static 'misvoti/css/sb-admin.css' %}" rel="stylesheet">
@@ -31,13 +35,16 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <!-- jQuery -->
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
-  <script src="//code.jquery.com/jquery-1.12.4.js"></script>
-  <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+      <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
+
+      <script src="//code.jquery.com/jquery-1.12.4.js"></script>
+      <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="{% static 'misvoti/js/bootstrap.min.js' %}"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 
     {% block inicio_pagina_scripts %}
     {% endblock %}
@@ -45,7 +52,10 @@
     <script src="{% static 'misvoti/js/plugins/morris/raphael.min.js' %}"></script>
     <script src="{% static 'misvoti/js/plugins/morris/morris.min.js' %}"></script>
     <script src="{% static 'misvoti/js/plugins/morris/morris-data.js' %}"></script>
+
+    <!--Plugin para enviar archivo en el form de crear proyecto por ajax-->
     <script src="{% static 'misvoti/js/plugins/malsupform/jquery.form.js' %}"></script>
+
     <script src="{% static 'misvoti/js/csrftokens.js' %}"></script>
 
 </head>
@@ -65,6 +75,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="{% url 'home' %}">Mis Voti</a>
+                <p class="navbar-text">¡Planea tus trimestres!</p>
             </div>
 
             {% if user.is_authenticated %}
