--- a/misvoti/templates/misvoti/index.html
+++ b/misvoti/templates/misvoti/index.html
@@ -16,41 +16,39 @@
     <!-- /.row -->
 
     <div class="row">
-        <div class="col-lg-12">
-            <div class="col-md-4 col-xs-8">
-                <div class="login-panel panel panel-default">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">Ingrese sus datos</h3>
-                    </div>
-                    <div class="panel-body">
-                        <form method="post" action="{% url 'home' %}" class="form-signin" role="form">
-                            {% csrf_token %}
-
-                            <label for="{{form.username.id_for_label}}" class="sr-only">{{form.username.label}}</label>
-                            <input type="text" id="{{form.username.id_for_label}}" maxlength="254" name="username" class="form-control" placeholder="{{form.username.label}}" required autofocus>
-
-                            <label for="{{form.password.id_for_label}}" class="sr-only">{{form.password.label}}</label>
-                            <input type="password"  style="margin-top:5px" id="{{form.password.id_for_label}}" name="password" class="form-control" placeholder="{{form.password.label}}" required>
-
-                            {% if form.errors %}
-                                <p class="bg-danger" style="margin-top:10px;padding:5px">Username o contraseña incorrecta. Revise e intente de nuevo.</p>
-                            {% endif %}
-
-                            <button class="btn btn-lg btn-primary btn-block" type="submit" style="margin-top:5px">Iniciar sesión</button>
-
-                            <input type="hidden" name="next" value="{{ next }}" />
-                        </form>
-                    </div>
+        <div class="col-md-offset-4 col-md-4">
+            <div class="login-panel panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Ingrese sus datos</h3>
                 </div>
-                {% url 'login_cas' as login_cas%}
-                <div class=" panel panel-default">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">Métodos alternativos de acceso</h3>
-                    </div>
-                    <div class="panel-body">
-                        <a href="https://secure.dst.usb.ve/login?service={% if request.is_secure %}https://{% else %}http://{% endif %}{{ request.get_host }}{{ login_cas}}" class="btn btn-lg btn-primary btn-block" role="button" style="margin-top:5px">Iniciar sesión con mi USB-ID</a>
+                <div class="panel-body">
+                    <form method="post" action="{% url 'home' %}" class="form-signin" role="form">
+                        {% csrf_token %}
+
+                        <label for="{{form.username.id_for_label}}" class="sr-only">{{form.username.label}}</label>
+                        <input type="text" id="{{form.username.id_for_label}}" maxlength="254" name="username" class="form-control" placeholder="{{form.username.label}}" required autofocus>
+
+                        <label for="{{form.password.id_for_label}}" class="sr-only">{{form.password.label}}</label>
+                        <input type="password"  style="margin-top:5px" id="{{form.password.id_for_label}}" name="password" class="form-control" placeholder="{{form.password.label}}" required>
+
+                        {% if form.errors %}
+                            <p class="bg-danger" style="margin-top:10px;padding:5px">Username o contraseña incorrecta. Revise e intente de nuevo.</p>
+                        {% endif %}
+
+                        <button class="btn btn-lg btn-primary btn-block" type="submit" style="margin-top:5px">Iniciar sesión</button>
+
                         <input type="hidden" name="next" value="{{ next }}" />
-                    </div>
+                    </form>
+                </div>
+            </div>
+            {% url 'login_cas' as login_cas%}
+            <div class=" panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Métodos alternativos de acceso</h3>
+                </div>
+                <div class="panel-body">
+                    <a href="https://secure.dst.usb.ve/login?service={% if request.is_secure %}https://{% else %}http://{% endif %}{{ request.get_host }}{{ login_cas}}" class="btn btn-lg btn-primary btn-block" role="button" style="margin-top:5px">Iniciar sesión con mi USB-ID</a>
+                    <input type="hidden" name="next" value="{{ next }}" />
                 </div>
             </div>
         </div>
